tests/error/importviewsubmit.js
export class ImportViewSubmitError extends Error {
}
